--- a/src/main/java/org/paulvargas/tools/regex/MainFrame.form
+++ b/src/main/java/org/paulvargas/tools/regex/MainFrame.form
@@ -79,6 +79,11 @@
           </AuxValues>
         </Component>
         <Component class="javax.swing.JTextField" name="regexTextField">
+          <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Monospaced" size="12" style="1"/>
+            </Property>
+          </Properties>
         </Component>
       </SubComponents>
     </Container>
@@ -155,6 +160,9 @@
                 <Component class="javax.swing.JTextArea" name="inputTextArea">
                   <Properties>
                     <Property name="columns" type="int" value="20"/>
+                    <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                      <Font name="Monospaced" size="12" style="0"/>
+                    </Property>
                   </Properties>
                 </Component>
               </SubComponents>
@@ -199,7 +207,7 @@
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="102" alignment="0" attributes="0">
                               <EmptySpace max="-2" attributes="0"/>
-                              <Component id="groupsScrollPane" pref="352" max="32767" attributes="0"/>
+                              <Component id="groupsScrollPane" pref="356" max="32767" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
                           </Group>
                       </Group>
@@ -267,7 +275,7 @@
                                   <Component id="limitSpinner" alignment="3" min="-2" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace max="-2" attributes="0"/>
-                              <Component id="splitScrollPane" pref="326" max="32767" attributes="0"/>
+                              <Component id="splitScrollPane" pref="330" max="32767" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
                           </Group>
                       </Group>
@@ -384,6 +392,11 @@
                       </AuxValues>
                     </Component>
                     <Component class="javax.swing.JTextField" name="replacementTextField">
+                      <Properties>
+                        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                          <Font name="Monospaced" size="12" style="0"/>
+                        </Property>
+                      </Properties>
                     </Component>
                     <Component class="javax.swing.JRadioButton" name="replaceFirstRadioButton">
                       <Properties>
@@ -427,6 +440,9 @@
                         <Component class="javax.swing.JTextArea" name="resultTextArea">
                           <Properties>
                             <Property name="columns" type="int" value="20"/>
+                            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                              <Font name="Monospaced" size="12" style="0"/>
+                            </Property>
                             <Property name="rows" type="int" value="5"/>
                           </Properties>
                         </Component>
@@ -455,7 +471,7 @@
                     </DimensionLayout>
                     <DimensionLayout dim="1">
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <EmptySpace min="0" pref="374" max="32767" attributes="0"/>
+                          <EmptySpace min="0" pref="378" max="32767" attributes="0"/>
                       </Group>
                     </DimensionLayout>
                   </Layout>
