--- a/src/main/java/org/paulvargas/tools/regex/MainFrame.form
+++ b/src/main/java/org/paulvargas/tools/regex/MainFrame.form
@@ -414,6 +414,7 @@
                         <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
                           <ComponentRef name="buttonGroup"/>
                         </Property>
+                        <Property name="selected" type="boolean" value="true"/>
                         <Property name="text" type="java.lang.String" value="Replace All"/>
                       </Properties>
                       <Events>
